--- a/index.html
+++ b/index.html
@@ -15,19 +15,18 @@
     <!-- Main Todo Container -->
     <div class="todo-Container">
 
-         <!-- Header Section -->
+        <!-- Header Section -->
         <header>
             <!-- Input Container with Icons -->
             <div id="input-Container">
                 <img src="list.png" alt="list-Icon" id="list-Icon">
-                <input type="text" id="task-Input" placeholder="Type your todo list">                
+                <input type="text" id="task-Input" placeholder="Type your todo list">
                 <button id="add-Btn"><img src="add.png" alt="add" id="add-Icon"></button>
             </div>
             <!-- Bottom Header Section with "Complete All Tasks" and "Clear Completed" Actions -->
             <div id="header-Bottom">
                 <p id="complete-All">
-                    <img src="double-tick.png" alt="double-check" 
-                    id="doubleCheck-Icon">
+                    <img src="double-tick.png" alt="double-check" id="doubleCheck-Icon">
                     Complete all tasks
                 </p>
                 <p id="clear-Complete">Clear completed</p>
